# lusanmanso.information.io

./: .gitignore  APUNTES.ipynb  README.md  pyproject.toml
practica1/: WikipediaAnalytics.py  WikipediaAnalyticsValidation.ipynb  WikipediaAnalyticsValidation_Ext.ipynb  WikipediaAnalytics_vacio.py
practica1/files/: espania_es.html  grecia_es.html  italia_es.html  polonia_es.html  serbia_es.html
practica2/: EmailAnalytics.py  EmailAnalyticsValidation.ipynb  email_dataset.csv
tema1/: into_python.ipynb  intro_pandas.ipynb
tema1/data/: data.json  datos.avro  datos.csv  datos.parquet
tema1/ejercicios1/: ejercicios_pandas.ipynb
tema1/output/: datos_salida.json  datos_salida_pandas.avro  datos_salida_pandas.csv  datos_salida_pandas.json  datos_salida_pandas.parquet
tema2/: regex_codification.ipynb  tokenization.ipynb
tema2/ejercicios2/: ejercicios_regex.ipynb  ejercicios_tokenization.ipynb
tema2/test_codification/: test-cyrilic.txt  test_latin-1.txt  test_utf16.txt  test_utf8.txt
tema3/: api_social.ipynb  b4soup.py  html_scrapping.ipynb  selenium_driver.py
tema3/challenge_easter_flight/: easter_flight.ipynb  easter_flight.md  easter_flight.py
tema3/ejercicios3/: ejercicios_scraper.ipynb
tema4/: feelings.ipynb  graphs.ipynb  lda.ipynb  resumen.ipynb  text_mining.txt
tema5/: graphs_2.ipynb
tema6/: LLM.ipynb  LLM2.ipynb
