[project]
name = "bain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastavro>=1.12.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "praw>=7.8.1",
    "regex>=2026.1.15",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "wordcloud>=1.9.6",
]
